# Structured-Abstracts

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
notebooks/: ColPali_Demo.ipynb  RAG_demo.ipynb  copali_demo.ipynb  get_papers.ipynb  rag_lang_chain.ipynb
src/: get_papers.py
