[project]
name = "structured-abstracts"
version = "0.1.0"
description = "A demo for structured abstract extraction using colpali"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpathlib>=0.20.0",
    "colpali-engine>=0.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "load-dotenv>=0.1.0",
    "nbstripout>=0.7.1",
    "nvitop>=1.3.2",
    "pdf2image>=1.17.0",
    "pip>=24.3.1",
    "pydantic>=2.9.2",
    "stamina>=24.3.0",
    "structlog>=24.4.0",
    "tyro>=0.8.14",
]
