[project]
name = "structured-abstracts"
version = "0.1.0"
description = "A demo for structured abstract extraction using colpali"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.7",
    "llama-index>=0.11.21",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "numpy<2",
    "nvitop>=1.3.2",
    "pdf2image>=1.17.0",
    "pip>=24.3.1",
    "pydantic>=2.9.2",
    "pymupdf>=1.24.13",
    "sentence-transformers>=3.2.1",
    "torch>=2.5.1",
    "transformers>=4.46.1",
    "tyro>=0.8.14",
]
