[project]
name = "structured-abstracts"
version = "0.1.0"
description = "A demo for structured abstract extraction using colpali"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.7",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-llms-huggingface>=0.3.5",
    "llama-index-llms-huggingface-api>=0.2.0",
    "llama-index-llms-vllm>=0.2.0",
    "llama-index>=0.11.21",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "numpy<2",
    "nvitop>=1.3.2",
    "pydantic>=2.9.2",
    "sentence-transformers>=3.2.1",
    "tyro>=0.8.14",
    "huggingface-hub[inference]>=0.23.5",
    "pillow>=10.4.0",
    "tqdm>=4.66.6",
    "colpali-engine>=0.3.3",
    "pymupdf>=1.24.13",
    "langchain-community>=0.3.5",
    "langchain-huggingface>=0.1.2",
    "langchain-core>=0.3.15",
    "torch>=2.4.0",
]
